# minecraft-command-generator

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
mc_commands/: _version.py  container.py  give.py  item.py  loaders.py  stacking.py  target.py
mc_commands/tests/: test_container.py  test_directories.py  test_give.py  test_item.py  test_loaders.py  test_stacking.py  test_version.py
notebooks/: demo_give_commands.ipynb
