[tool.poetry]
name = "mc_commands"
version = "0.0.2"
description = "Tool for generating Minecraft commands"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mc_commands"}]
include = ["data/*", "README.md", "mc_commands/tests/test_data/*"]

[tool.poetry.dependencies]
python = "^3.11"
minecraft-data = {git = "https://github.com/newexo/python-minecraft-data.git", branch = "master"}
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.15.11"
coverage = "^7.12.0"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.4.8"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"_version.py" = ["F841"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/functional_tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
